[package]
name = "game"
version = "0.1.0"
authors = ["Giacomo Rizzi <gufoes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6"
rand = "*"
rayon = "1.1"
smallvec = "1.7"
chashmap = "*"
hashbrown = "0.11"
generator = "0.7"
