[package]
name = "game"
version = "0.1.0"
authors = ["Giacomo Rizzi <gufoes@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
rand = "*"
rayon = "1.1"
smallvec = "1.7"
chashmap = "*"
hashbrown = "0.13"
generator = "0.7"
